<resources>
    <string name="app_name">The Binding of Gilbert</string>
    <string name="copyright">Group 1</string>
    <!-- Main page -->
    <string name="title_main_page">Main Page</string>
    <string name="logIn_btn">LogIn</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_activity_shop">Shop</string>
    <string name="cancel_button">Cancel</string>
    <string name="button_buy">Buy</string>
    <string name="btn_time">By time</string>
    <string name="btn_kills">By kills</string>
    <string name="top10">Top 10 games</string>
    <string name="title_inventory">Inventory</string>
    <string name="inventory_btn">My Inventory</string>
    <!-- Register -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="repeat_email">Repeat Email</string>
    <string name="password">Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <!-- Menu -->
    <string name="stats_btn">Stats</string>
    <string name="profile_btn">Profile</string>
    <string name="shop_btn">Shop</string>
    <string name="log_out_btn">Log Out</string>
    <string name="languages_btn">Languages</string>
    <string name="issues_btn">Issues</string>
    <string name="play_btn">Play</string>
    <string name="more_options">Press for more options</string>
    <!-- Languages -->
    <string name="choose_lang">Choose your language!</string>
    <string name="language_es">Spanish</string>
    <string name="language_english">English</string>
    <string name="language_catalan">Catalan</string>
    <!-- LogIn page -->
    <string name="sign_in">Sign In</string>
    <!-- Edit profile activity -->
    <string name="update_username">Update username</string>
    <string name="update_password">Update password</string>
    <string name="update_email">Update email</string>

    <!-- Nav menu -->
    <string name="nav_account">My profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_forum">Forum</string>
    <!-- Profile activity -->
    <string name="profile_header">My profile</string>
    <string name="language">Language</string>
    <string name="delete_btn">Delete user</string>
    <string name="update_user">Update user</string>

    <!-- Forum activity -->
    <string name="write_something">Write something here!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>