<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MenuActivity"
    tools:openDrawer="start">


    <LinearLayout
        android:id="@+id/main_menu_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/button_stats"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/stats_btn" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/button_profile"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/profile_btn" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/button_shop"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/shop_btn" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/log_out_btn" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btnIssues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/issues_btn" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>


</androidx.drawerlayout.widget.DrawerLayout>