<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/english_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_english"
        app:layout_constraintBottom_toTopOf="@+id/catalan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/catalan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_catalan"
        app:layout_constraintBottom_toTopOf="@+id/spanish_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/english_button" />

    <Button
        android:id="@+id/spanish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalan_button" />

</androidx.constraintlayout.widget.ConstraintLayout>